--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -34,15 +34,22 @@ provisioner:
       verbosity: 0
   connection_options:
     ansible_user: ${ANSIBLE_USER}
-    s3_bucket: mamono210
-    s3_object_name: ansible-roles-mamono210/redmine/backup/git.tar.gz
-    upload_file_path: /tmp/redmine-backup/git.tar.gz
+    redmine_backup_data_dir: /tmp/redmine-backup
+    redmine_archived_git_file: git.tar.gz
   env:
     MOLECULE_DEBUG: true
   log: true
 verifier:
   name: ansible
 scenario:
+  converge_sequence:
+    - converge
+  create_sequence:
+    - dependency
+    - cleanup
+    - destroy
+    - syntax
+    - create
   test_sequence:
     - dependency
     - cleanup
@@ -50,7 +57,6 @@ scenario:
     - syntax
     - create
     - converge
-    - side_effect
     - verify
     - cleanup
     - destroy
