--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -78,13 +78,25 @@ workflows:
           requires:
             - yamllint
       - molecule-ec2:
-          ansible-user: centos
+          ansible-user: 'centos'
           aws-ami-name: 'redmica_restore_centos-stream8-1*'
           aws-ami-owner-id: '808683561341'
           aws-instance-type: 't2.medium'
-          aws-resource-name: 'circleci_ansible-roles_redmine_backup_git_centos-stream8'
+          aws-resource-name: 'circleci_ansible-roles_rm_bk_git_cs8'
           aws-vpc-subnet-id: 'subnet-022a704b3061b8b39'
-          circleci-timeout: '15m'
+          circleci-timeout: '40m'
+          molecule-scenario-name: 'default'
+          context: aws-oidc
+          requires:
+            - ansible-lint
+      - molecule-ec2:
+          ansible-user: 'ec2-user'
+          aws-ami-name: 'redmica_restore_centos-stream9-1*'
+          aws-ami-owner-id: '808683561341'
+          aws-instance-type: 't2.medium'
+          aws-resource-name: 'circleci_ansible-roles_rm_bk_git_cs9'
+          aws-vpc-subnet-id: 'subnet-022a704b3061b8b39'
+          circleci-timeout: '40m'
           molecule-scenario-name: 'default'
           context: aws-oidc
           requires:
