--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -78,18 +78,6 @@ workflows:
           requires:
             - yamllint
       - molecule-ec2:
-          ansible-user: 'centos'
-          aws-ami-name: 'redmica_restore_centos-stream8-1*'
-          aws-ami-owner-id: '808683561341'
-          aws-instance-type: 't2.medium'
-          aws-resource-name: 'circleci_ansible-roles_rm_bk_git_cs8'
-          aws-vpc-subnet-id: 'subnet-022a704b3061b8b39'
-          circleci-timeout: '40m'
-          molecule-scenario-name: 'default'
-          context: aws-oidc
-          requires:
-            - ansible-lint
-      - molecule-ec2:
           ansible-user: 'ec2-user'
           aws-ami-name: 'redmica_restore_centos-stream9-1*'
           aws-ami-owner-id: '808683561341'
@@ -98,6 +86,6 @@ workflows:
           aws-vpc-subnet-id: 'subnet-022a704b3061b8b39'
           circleci-timeout: '40m'
           molecule-scenario-name: 'default'
-          context: aws-oidc
+          context: 'aws-oidc'
           requires:
             - ansible-lint
